# final-project-level3-recsys-01

./: .gitignore  README.md  crawler.py
app/: app.py  database.py  inference.py  pyproject.toml
app/model/weight/FM/: FM_best_model.pkl
back-end/: main.py  pyproject.toml
data/: crawler.py
data-crawling/: README.md
data/data-preprocessing/: README.md  data-preprocessing.ipynb  data-preprocessing.py  interaction.ipynb  interaction.py  interaction_itemid.json  interaction_itemid_imageurl_min30.json  interaction_itemid_min30.json  interaction_userid.json  interaction_userid_min30.json  itemid.json  itemid_imageurl.json  nohup.out  requirements.txt  run.sh  splitted_dataset.ipynb  splitted_dataset.py  test10_answer_min30.csv  test10_min30.csv  test_answer_min30.csv  test_min30.csv  transaction_itemid_imageurl_min30.json  transaction_itemid_min30.json  transaction_userid_min30.json  userid.json
front-end/: chage_image.js  index.html  login_script.js  login_style.css  manifest.json  popup.js  style.css
inference/: database.py  dataset.py  inference.py  main.py  model.py
inference/data/: item_db.csv  user_db.csv
inference/model/: _RecVAE.py  __init__.py  model.py
inference/output/: output_artsdesign.json  output_hugom.json  output_vllg.json
model/: README.md  inference.py  model.py  train.py
model/FM/: FMinference.py  FMmodel.py  lightFM10.py  requirements.txt
model/VAE/: dataset.py  metric.py  model.py  run_train.py
model/VAE/data/: RecVAE_valid.csv  RecVAE_valid_min30.csv
model/output/: output_artsdesign.json  output_hugom.json  output_vllg.json
