[tool.poetry]
name = "final-project"
version = "0.1.0"
description = "final-project"
authors = ["donghyyun <devv.daniel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.17.6"
manage-fastapi = "^1.1.1"
pandas = "^1.4.2"
joblib = "^1.1.0"
torch = "^1.11.0"
lightfm = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
